# chatty-desktop

./: .gitignore  ChattyNotifier - Backup.csproj  LICENSE  README.md  package-lock.json  package.json  vite.config.js
Properties/PublishProfiles/: FolderProfile.pubxml
notifier/: Chatty Notifier.sln  ChattyNotifier.csproj  Program.cs
notifier/src/: Utils.cs
notifier/src/events/: ChildSocketEvents.cs
notifier/src/scopes/: ChattySocketConnection.cs
notifier/src/serialized/: ChattyToast.cs  ChattyToastAudio.cs  NotificationButton.cs  NotificationComboBox.cs  NotificationComboBoxChoice.cs  NotificationLogo.cs  NotificationQueue.cs  TokenRepresentation.cs
public/: index.html
s-cache/: auth.json
src/: App.vue  ShellHelper.cs  index.html  main.js  router.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/s-cache/: auth.json
src-tauri/src/: main.rs
src/Managers/: AuthenticationManager.cs
src/assets/: app.css
src/buildpack/: Client.js  EventEmitter.js  README.md
src/buildpack/Core/: ChattyCore.js  ChattyCoreConfig.js
src/buildpack/Encryption/: encrypt.js
src/buildpack/Notification/: NotificationConfig.js  NotificationService.js
src/buildpack/Rest/: RestClient.js  RestConfig.js
src/buildpack/Voice/: VoiceSocket.js
src/components/: State.vue
src/events/: SocketEvents.cs
src/mixins/: ChattyMixin.js
src/pub/: splashscreen.html
src/serialized/: AuthJSONPriv.cs  ChattyJSONPayload.cs  ChattyToastActivation.cs  NotificationHeader.cs  NotificationTextBox.cs
src/store/: index.js  proto.js
src/views/: App.vue  LogIn.vue  Settings.vue
(+33 files in other folders)
